# esign-myphoto

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: dev.md
legal/: LICENSE.txt  THIRD-PARTY-NOTICES.txt
src/: main.py
src/data/i18n/: str.el.yml  str.en.yml
src/data/version/: version_info.txt  version_info.yml
src/esign_myphoto/: config.py  gui.py  i18n.py  io.py  sig.py  utils.py
utils/scripts/: clean.py  trivy.py
