[project]
name = "esign-myphoto"
version = "0.1.0"
description = "App for capturing signature images according to the myPhoto specifications."
authors = [
    {name = "Stefanos Chalkidis"},
]
dependencies = [
    "tomlkit>=0.12.4",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "vulture>=2.11",
]

[tool.pdm.scripts]
clean = "python utils/scripts/clean.py"
fmt = "ruff format ."
lint = "ruff check ."
lint-mypy = "mypy src"
lint-vulture = "vulture src"
main = "python src/main.py"
test = "pytest tests/"
trivy = "python utils/scripts/trivy.py"

[tool.mypy]
mypy_path="stubs"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.vulture]
min_confidence = 100