[project]
name = "esign-myphoto"
version = "1.0.1.dev0"
description = "App for capturing signature images according to the myPhoto specifications."
authors = [
    {name = "Stefanos Chalkidis"},
]
dependencies = [
    "tomlkit>=0.12.4",
    "i18nice>=0.13.2",
    "pyyaml>=6.0.1",
    "windows-tools-installed-software>=0.5.4",
    "pywin32>=306; sys_platform == \"win32\"",
    "pillow>=10.2.0",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "vulture>=2.11",
    "types-pywin32>=306.0.0.20240319",
    "types-Pillow>=10.2.0.20240324",
    "pyinstaller-versionfile>=2.1.1",
]
dev_package = [
    "pyinstaller>=6.5.0",
    "pip>=24.0",
]

[tool.pdm.scripts]
clean = "python utils/scripts/clean.py"
fmt = "ruff format ."
lint = "ruff check ."
lint-mypy = "mypy src"
lint-vulture = "vulture src"
main = "python src/main.py"
test = "pytest tests/"
trivy = "python utils/scripts/trivy.py"
version-info = "create-version-file src/data/version/version_info.yml --outfile src/data/version/version_info.txt"

[tool.mypy]
mypy_path="stubs"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "windows_tools.*",
]
ignore_missing_imports = true

[tool.vulture]
min_confidence = 100